--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="game-container">
+        
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
