Aggiunge un array di obj nel container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="game-container">
-        
+        <div class="game-immage">
+            <img src="img/01.webp" alt="">
+            <div class="cards">
+                <div class="card">
+
+                </div>
+            </div>
+        </div>
     </div>
     <script src="js/main.js"></script>
 </body>
