Aggiunge un h3 e p posizionandoli nella figura.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="game-container">
         <div class="game-immage">
             <img src="img/01.webp" alt="">
+            <div class="game-immage-text">
+                <h3>Marvel's Spiderman Miles Morale</h3>
+                <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
+            </div>
             <div class="cards">
                 <div class="card">
 
