--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
                 <h3>Marvel's Spiderman Miles Morale</h3>
                 <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
             </div>
-            <div class="cards">
-                <div class="card">
+        </div>
+        <div class="cards">
+            <button class="up-card">
+                <i class="fa-solid fa-caret-up"></i>
+            </button>
+            <button class="down-card">
+                <i class="fa-solid fa-caret-down"></i>
+            </button>
+            <div class="card">
 
-                </div>
             </div>
         </div>
     </div>
