--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="game-container">
         <div class="game-immage">
-            <img src="img/01.webp" alt="">
+            <!-- <img src="img/01.webp" alt="">
             <div class="game-immage-text">
                 <h3>Marvel's Spiderman Miles Morale</h3>
                 <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
-            </div>
+            </div> -->
         </div>
         <div class="cards">
             <button class="up-card">
@@ -26,9 +26,18 @@
             <button class="down-card">
                 <i class="fa-solid fa-caret-down"></i>
             </button>
-            <div class="card">
-
-            </div>
+            <template id="template-game">
+                <img src="img/01.webp" alt="">
+                <div class="game-immage-text">
+                    <h3>Marvel's Spiderman Miles Morale</h3>
+                    <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
+                </div>
+            </template>
+            <template id="template-card">
+                <div class="card">
+                    <img src="img/01.webp" alt="">
+                </div>
+            </template>
         </div>
     </div>
     <script src="js/main.js"></script>
